--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="carousel.css">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     
 
     <title>Santa Fe</title>
@@ -46,7 +47,7 @@
         <input class="form-control me-2" type="email" placeholder="Correo Electronico" aria-label="emial">
         <button class="btn btn-outline-primary" type="button">Suscribete</button>
       </form>-->
-      <a href="https://api.whatsapp.com/send?phone=593963463044&text=Hola%20quisiera%20mas%20informaci%C3%B3n"><i class="bi bi-whatsapp"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=593963463044&text=Hola%20quisiera%20mas%20informaci%C3%B3n" target="_blank"><i class="bi bi-whatsapp"></i></a>
 
     </div>
   </div>
@@ -79,8 +80,8 @@
     <!-- INTRO -->
 
     <section class="w-50 mx-auto text-center pt-5" id="intro">
-      <h1 class="p-3 fs-2 border-top border-3"><span class="text-info"> Comunidad de apoyo en adicciones</span></h1>
-      <p class="p-3 fs-4"><span class="text-info">CENTRO DE ADICCIONES Y TRATAMIENTO</span> Contamos con instalaciones de primera. Contactanos vía What´s App o llamada al numero: 0963463044</p>
+      <h1 class="p-3 fs-2 border-top border-3"><span class="text-info"> Comunidad de apoyo en dependencias</span></h1>
+      <p class="p-3 fs-4"><span class="text-info">CENTRO DE DEPENDENCIAS Y TRATAMIENTO</span> Contamos con instalaciones de primera. Contactanos vía What´s App o llamada al numero: 0963463044 / 0995340216</p>
 
     </section>
 
@@ -144,7 +145,14 @@
 Terapia que pone en práctica el centro se basa en el modelo de Minnesota, cuyos valores son, entre otras cosas, un tratamiento personalizado y global en todos los niveles de la persona, emocional y física; abstinencia total; la creación de una comunidad de apoyo En personas con mismos problemas y apoyo constante de la familia.</p>
       </div>
       <div class="mt-5 text-center">
+        <p class="fs-4 text-center text-info" >Centro Masculino</p>
         <img class="img-fluid" src="./img/nosotros.png" alt="equipo">
+      </div>
+
+        </div>
+      <div class="mt-5 text-center">
+        <p class="fs-4 text-center text-info" >Centro Femenino</p>
+        <img class="img-fluid" src="./img/nosotros2.png" alt="equipo">
       </div>
 
       <div id="local" class="border-top border-2">
@@ -153,7 +161,7 @@ Terapia que pone en práctica el centro se basa en el modelo de Minnesota, cuyos
           <div class="wrapper">
             <h2>Ubicado valle de los chillos, San Rafael</h2>
             <h2 class="text-primary mb-4" id="typewriter"></h2>
-            <p class="fs-5 text-body">Elejimos esta bella ciudad por su ubicación, su clima.</p>
+            <p class="fs-5 text-body">Elejimos esta bella ciudad por su ubicación y su clima.</p>
             <section class="d-flex" id="numeros-local">
               <div>
                 <p class="text-info fs-5">248</p>
@@ -187,8 +195,10 @@ Terapia que pone en práctica el centro se basa en el modelo de Minnesota, cuyos
       <div class="container" id="contenedor-formulario">
         <div class="titulo-formulario" class="text-center mb-4">
           <div><img src="./img/foot.png" alt="contacto" class="img-fluid"></div>
-          <h2>Contactos</h2>
-          <p class="fs-5">Estamos aqui para hacer realidad tus proyectos</p>
+          <h2>Contactos 0963463044 / 0995340216</h2>
+          <p class="fs-5">Valle de los chillos San Rafael
+LUNES A VIERNES 09:00 - 19:00
+SABADO-DOMINGO 10:00 - 14:00 </p>
         </div>
         <form action="">
            <div class="form-group">
@@ -211,13 +221,17 @@ Terapia que pone en práctica el centro se basa en el modelo de Minnesota, cuyos
 
      </section>
 
+     <a href="https://api.whatsapp.com/send?phone=+593963463044" class="btn-wsp" target="_blank">
+      <i class="fa fa-whatsapp icono"></i>
+  </a>
+
      <!-- PIE DE LA PAGINA -->
 
      <footer class="w-100 d-flex align-items-center justify-content-center flex-wrap">
-      <p class="fs-5 px-3 pt-3">Santa fe &copy; Todos Los Derechos Reservados 2021 / Contactanos 0963463044</p>
+      <p class="fs-5 px-3 pt-3">Santa fe &copy; Todos Los Derechos Reservados 2021 / Contactanos 0963463044 / 0995340216</p>
       <div id="iconos"></div>
-      <a href="https://www.facebook.com/profile.php?id=100009937938077"><i class=" bi bi-facebook "></i></a>
-      <a href="https://api.whatsapp.com/send?phone=593963463044&text=Hola%20quisiera%20mas%20informaci%C3%B3n"><i class=" bi bi-whatsapp"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=100009937938077" target="_blank"><i class=" bi bi-facebook "></i></a>
+      <a href="https://api.whatsapp.com/send?phone=593963463044&text=Hola%20quisiera%20mas%20informaci%C3%B3n" target="_blank"><i class=" bi bi-whatsapp"></i></a>
      
      </footer>
 
