--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header class="container-fluid bg-info d-flex justify-content-center">
 
-      <p class="text-light mb-0 p-2 fs-6">Contactanos 0963463044</p>
+      <p class="text-light mb-0 p-2 fs-6">Contactanos  0995340216  0963489736</p>
 
     </header>
 
@@ -39,6 +39,9 @@
           <a class="nav-link" href="#servicios">Servicios</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#centros">Centros</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#seccion-contacto">Contacto</a>
         </li>
     </ul>
@@ -47,7 +50,7 @@
         <input class="form-control me-2" type="email" placeholder="Correo Electronico" aria-label="emial">
         <button class="btn btn-outline-primary" type="button">Suscribete</button>
       </form>-->
-      <a href="https://api.whatsapp.com/send?phone=593963463044&text=Hola%20quisiera%20mas%20informaci%C3%B3n" target="_blank"><i class="bi bi-whatsapp"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=593995340216&text=Hola%20quisiera%20mas%20informaci%C3%B3n" target="_blank"><i class="bi bi-whatsapp"></i></a>
 
     </div>
   </div>
@@ -81,7 +84,7 @@
 
     <section class="w-50 mx-auto text-center pt-5" id="intro">
       <h1 class="p-3 fs-2 border-top border-3"><span class="text-info"> Comunidad de apoyo en dependencias</span></h1>
-      <p class="p-3 fs-4"><span class="text-info">CENTRO DE DEPENDENCIAS Y TRATAMIENTO</span> Contamos con instalaciones de primera. Contactanos vía What´s App o llamada al numero: 0963463044 / 0995340216</p>
+      <p class="p-3 fs-4"><span class="text-info">CENTRO DE DEPENDENCIAS Y TRATAMIENTO</span> Contamos con instalaciones de primera. Contactanos vía What´s App o llamada al numero: 0963489736 / 0995340216</p>
 
     </section>
 
@@ -138,7 +141,7 @@
      <!-- ACERCA DE NOSOTROS -->
 
      <section>
-      <div class="w-50 m-auto text-center" id="equipo">
+      <div class="w-50 m-auto text-center" id="centros">
         <h1 class="mb-5 fs-2">Somos un centro con 18 años de experiencia <span class="text-info"> Permítenos ser parte de tu recuperación</span></h1>
         <p class="fs-4">En Santa fe, encontraremos un grupo de grandes y variados profesionales multidisciplinarios que tratarán en la mejor manera posible de todo tipo de dependencias y adiciones, dependencia de alcohol, adicciones a todo tipo de droga, trastorno de conducta, trastornos emocionales.
 
@@ -149,10 +152,22 @@ Terapia que pone en práctica el centro se basa en el modelo de Minnesota, cuyos
         <img class="img-fluid" src="./img/nosotros.png" alt="equipo">
       </div>
 
+         </div>
+      <div class="mt-5 text-center">
+        <p class="fs-4 text-center text-info" ></p>
+        <img class="img-fluid" src="./img/nosotros3.png" alt="equipo">
+      </div>
+
         </div>
       <div class="mt-5 text-center">
         <p class="fs-4 text-center text-info" >Centro Femenino</p>
         <img class="img-fluid" src="./img/nosotros2.png" alt="equipo">
+      </div>
+
+        </div>
+      <div class="mt-5 text-center">
+        <p class="fs-4 text-center text-info" ></p>
+        <img class="img-fluid" src="./img/nosotros4.png" alt="equipo">
       </div>
 
       <div id="local" class="border-top border-2">
@@ -195,20 +210,20 @@ Terapia que pone en práctica el centro se basa en el modelo de Minnesota, cuyos
       <div class="container" id="contenedor-formulario">
         <div class="titulo-formulario" class="text-center mb-4">
           <div><img src="./img/foot.png" alt="contacto" class="img-fluid"></div>
-          <h2>Contactos 0963463044 / 0995340216</h2>
+          <h2>Contactos 0963489736 / 0995340216</h2>
           <p class="fs-5">Valle de los chillos San Rafael
 LUNES A VIERNES 09:00 - 19:00
 SABADO-DOMINGO 10:00 - 14:00 </p>
         </div>
-        <form action="">
+        <form action="mensaje.php"  method="post" enctype="text/plain">
            <div class="form-group">
     
-    <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com" required>
+    <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com" required name="mail">
   </div>
  
   <div class="form-group">
     
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escribe tu mensaje aqui"></textarea>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escribe tu mensaje aqui" name="texto"></textarea>
   </div>
 
   <div class="mb-3">
@@ -221,14 +236,14 @@ SABADO-DOMINGO 10:00 - 14:00 </p>
 
      </section>
 
-     <a href="https://api.whatsapp.com/send?phone=+593963463044" class="btn-wsp" target="_blank">
+     <a href="https://api.whatsapp.com/send?phone=+593995340216" class="btn-wsp" target="_blank">
       <i class="fa fa-whatsapp icono"></i>
   </a>
 
      <!-- PIE DE LA PAGINA -->
 
      <footer class="w-100 d-flex align-items-center justify-content-center flex-wrap">
-      <p class="fs-5 px-3 pt-3">Santa fe &copy; Todos Los Derechos Reservados 2021 / Contactanos 0963463044 / 0995340216</p>
+      <p class="fs-5 px-3 pt-3">Santa fe &copy; Todos Los Derechos Reservados 2021 / Contactanos 0963489736 / 0995340216</p>
       <div id="iconos"></div>
       <a href="https://www.facebook.com/profile.php?id=100009937938077" target="_blank"><i class=" bi bi-facebook "></i></a>
       <a href="https://api.whatsapp.com/send?phone=593963463044&text=Hola%20quisiera%20mas%20informaci%C3%B3n" target="_blank"><i class=" bi bi-whatsapp"></i></a>
